:books: added products to openapi
