# openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.2
 info:
   title: "PHP API Server"
   description: "The api enables you to interact with the data saved on the server"
@@ -86,6 +86,48 @@ x-shemas:
           <<: *FormulaBought404Schema
           xml:
             name: "error"
+  Product404: &Product404
+    description: "The product cannot be found"
+    content:
+      application/json:
+        schema: &Product404Schema
+          type: "object"
+          properties:
+            <<: *404
+            additional_message:
+              type: "string"
+              example: "Unknown product with id 156"
+      application/xml:
+        schema:
+          <<: *Product404Schema
+          xml:
+            name: "error"
+  Product409: &Product409
+    description: "The request cannot be prossed due to synthax error or failed semantic validation."
+    content:
+      application/json:
+        schema: &Product409Schema
+          type: "object"
+          properties:
+            conflicts:
+              type: "object"
+              properties:
+                on:
+                  type: "string"
+                  example: "group"
+                problem:
+                  type: "string"
+                  enum:
+                    - "not found"
+            <<: *409
+            additional_message:
+              type: "string"
+              example: "group 566 does not exist"
+      application/xml:
+        schema:
+          <<: *Product409Schema
+          xml:
+            name: "error"
   error: &error
     type: "object"
     properties:
@@ -137,12 +179,28 @@ x-shemas:
       additional_message:
         type: "string"
         descrption: "An additionnal message explaining the error that occured"
+  noimage: &noimage
+    name: "noimage"
+    in: "query"
+    required: false
+    description: "If present, prevent the server from sending the image linked to the entity."
+    schema:
+      type: "string"
+  pretty: &pretty
+    name: "pretty"
+    in: "query"
+    required: false
+    description: "If present, the output will be nicely formatted."
+    schema:
+      type: "string"
     
       
 
 paths:
   # Clients
   "/cafet/clients":
+    parameters:
+      - <<: *pretty
     get:
       tags:
         - "Clients"
@@ -185,6 +243,7 @@ paths:
                   $ref: "#/components/schemas/Client"
   "/cafet/clients/search/{search}":
     parameters:
+      - <<: *pretty
       - name: "search"
         in: "path"
         required: true
@@ -216,6 +275,7 @@ paths:
   "/cafet/clients/{clientId}":
     summary: "Operations on a specific client."
     parameters:
+      - <<: *pretty
       - name: "clientId"
         in: "path"
         required: true
@@ -261,6 +321,7 @@ paths:
         "404": *Client404
   "/cafet/clients/{clientId}/reloads":
     parameters:
+      - <<: *pretty
       - name: "clientId"
         in: "path"
         required: true
@@ -293,6 +354,7 @@ paths:
         "404": *Client404
   "/cafet/clients/{clientId}/expenses":
     parameters:
+      - <<: *pretty
       - name: "clientId"
         in: "path"
         required: true
@@ -325,6 +387,7 @@ paths:
         "404": *Client404
   "/cafet/clients/{clientId}/last_expenses":
     parameters:
+      - <<: *pretty
       - name: "clientId"
         in: "path"
         required: true
@@ -357,6 +420,7 @@ paths:
         "404": *Client404
   "/cafet/clients/{clientId}/order":
     parameters:
+      - <<: *pretty
       - name: "clientId"
         in: "path"
         required: true
@@ -387,7 +451,8 @@ paths:
                     properties:
                       type:
                         type: "string"
-                        example: "product"
+                        enum:
+                          - "product"
                       id:
                         type: "integer"
                         format: "int64"
@@ -406,7 +471,8 @@ paths:
                     properties:
                       type:
                         type: "string"
-                        example: "formula"
+                        enum:
+                          - "formula"
                       id:
                         type: "integer"
                         format: "int64"
@@ -480,6 +546,8 @@ paths:
 
   # Expenses
   "/cafet/expenses":
+    parameters:
+      - <<: *pretty
     get:
       tags:
         - "Expenses"
@@ -504,6 +572,7 @@ paths:
                   $ref: "#/components/schemas/Expense"
   "/cafet/expenses/{expenseId}":
     parameters:
+      - <<: *pretty
       - name: "expenseId"
         in: "path"
         required: true
@@ -529,6 +598,7 @@ paths:
         "404": *Expense404
   "/cafet/expenses/{expenseId}/details":
     parameters:
+      - <<: *pretty
       - name: "expenseId"
         in: "path"
         required: true
@@ -560,6 +630,8 @@ paths:
                   $ref: "#/components/schemas/ExpenseDetail"
         "404": *Expense404
   "/cafet/products_bought":
+    parameters:
+      - <<: *pretty
     get:
       tags:
         - "Expenses"
@@ -584,6 +656,7 @@ paths:
                   $ref: "#/components/schemas/ProductBought"
   "/cafet/products_bought/{id}":
     parameters:
+      - <<: *pretty
       - name: "id"
         in: "path"
         required: true
@@ -623,6 +696,8 @@ paths:
                 xml:
                   name: "error"
   "/cafet/formulas_bought":
+    parameters:
+      - <<: *pretty
     get:
       tags:
         - "Expenses"
@@ -647,6 +722,7 @@ paths:
                   $ref: "#/components/schemas/FormulaBought"
   "/cafet/formulas_bought/{id}":
     parameters:
+      - <<: *pretty
       - name: "id"
         in: "path"
         required: true
@@ -672,6 +748,7 @@ paths:
         "404": *FormulaBought404
   "/cafet/formulas_bought/{id}/products":
     parameters:
+      - <<: *pretty
       - name: "id"
         in: "path"
         required: true
@@ -704,6 +781,8 @@ paths:
         "404": *FormulaBought404
   # Reloads
   "/cafet/reloads":
+    parameters:
+      - <<: *pretty
     get:
       tags:
         - "Reloads"
@@ -782,6 +861,7 @@ paths:
                   name: "error"
   "/cafet/reloads/{id}":
     parameters:
+      - <<: *pretty
       - name: "id"
         in: "path"
         required: true
@@ -820,6 +900,196 @@ paths:
                 <<: *Reload404Schema
                 xml:
                   name: "error"
+  #Products
+  "/cafet/products":
+    parameters:
+      - <<: *pretty
+      - <<: *noimage
+    get:
+      tags:
+        - "Products"
+      summary: "Get a list of products."
+      description: "Permissions: CAFET_ADMIN_GET_PRODUCTS."
+      responses:
+        "200":
+          description: "Success."
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Product"
+            application/xml:
+              schema:
+                type: "array"
+                xml:
+                  name: "products"
+                  wrapped: true
+                items:
+                  $ref: "#/components/schemas/Product"
+    post:
+      tags:
+        - "Products"
+      summary: "Create a new product."
+      description: "Permissions: CAFET_ADMIN_MANAGE_PRODUCTS."
+      requestBody:
+        description: "The product to add"
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              required:
+                - "group"
+                - "name"
+                - "price"
+                - "viewable"
+              properties:
+                group:
+                  type: "integer"
+                  format: "int64"
+                  example: 3
+                name:
+                  type: "string"
+                  example: "Skittles"
+                price:
+                  type: "number"
+                  example: 0.8
+                viewable:
+                  type: "boolean"
+                  example: true
+      responses:
+        "204":
+          description: "The product has been successfully added."
+        "409": *Product409
+  "/cafet/products/{productId}":
+    parameters:
+      - <<: *pretty
+      - name: "productId"
+        in: "path"
+        required: true
+        description: "The id of the product wanted."
+        schema:
+          type: "integer"
+          format: "int64"
+    get:
+      parameters:
+        - <<: *noimage
+      tags:
+        - "Products"
+      summary: "Get a product specifying its id."
+      description: "Permissions: CAFET_ADMIN_GET_PRODUCTS."
+      responses:
+        "200":
+          description: "The wanted product."
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/Product"
+        "404": *Product404
+    put:
+      tags:
+        - "Products"
+      summary: "Replace the product with the specified id."
+      description: "Permissions: CAFET_ADMIN_MANAGE_PRODUCTS."
+      requestBody:
+        description: "The product to put instead of the actual"
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              required:
+                - "id"
+                - "group"
+                - "name"
+                - "price"
+                - "viewable"
+              properties:
+                id:
+                  type: "integer"
+                  format: "int64"
+                  description: "An id that MUST match the product's being edited."
+                  example: 14
+                type:
+                  type: "string"
+                  description: "The entity sent MUST include this field to avoid carelessness problems"
+                  enum:
+                    - "Product"
+                group:
+                  type: "integer"
+                  format: "int64"
+                  example: 3
+                name:
+                  type: "string"
+                  example: "Skittles"
+                price:
+                  type: "number"
+                  example: 0.8
+                viewable:
+                  type: "boolean"
+                  example: true
+      responses:
+        "200":
+          description: "The product has been replaced"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/Product"
+        "400":
+          $ref: "#/components/schemas/400Error"
+        "404": *Product404
+        "409": *Product409
+    patch:
+      tags:
+        - "Products"
+      summary: "Edit the product with the specified id."
+      description: "Permissions: CAFET_ADMIN_MANAGE_PRODUCTS."
+      requestBody:
+        description: "properties to change"
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              properties:
+                group:
+                  type: "integer"
+                  format: "int64"
+                  example: 3
+                name:
+                  type: "string"
+                  example: "Skittles"
+                price:
+                  type: "number"
+                  example: 0.8
+                viewable:
+                  type: "boolean"
+                  example: true
+                image:
+                  $ref: "#/components/schemas/image"
+      responses:
+        "204":
+          description: "The update has been made successfully."
+        "400":
+          $ref: "#/components/schemas/400Error"
+        "404": *Product404
+        "409": *Product409
+    delete:
+      tags:
+        - "Products"
+      summary: "Delete the product with the specified id."
+      description: "Permissions: CAFET_ADMIN_MANAGE_PRODUCTS."
+      responses:
+        "204":
+          description: "The update has been made successfully."
+        "404": *Product404
 
 components:
   securitySchemes:
@@ -1001,7 +1271,6 @@ components:
           example: 1
         date:
           $ref: "#/components/schemas/Calendar"
-        
     Calendar:
       type: "object"
       xml:
@@ -1035,6 +1304,81 @@ components:
           type: "integer"
           format: "int32"
           example: "13"
+    Product:
+      type: "object"
+      xml:
+        name: "product"
+      properties:
+        type:
+          type: "string"
+          enum:
+            - "Product"
+        group:
+          type: "integer"
+          format: "int64"
+          example: 3
+        stock:
+          type: "integer"
+          format: "int64"
+          example: 100
+        id:
+          type: "integer"
+          format: "int64"
+          example: 14
+        name:
+          type: "string"
+          example: "Skittles"
+        image:
+          $ref: "#/components/schemas/image"
+        price:
+          type: "number"
+          example: 0.8
+        viewable:
+          type: "boolean"
+          example: true
+        edit:
+          $ref: "#/components/schemas/Calendar"
+    image:
+      type: "string"
+      format: "byte"
+      description: "A base64 encoded image"
+      example: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAILSURBVDjLrVM7ixNhFB2LFKJV+v0L24nabIogtmItin9ALBS3tXNt3CWgVlpMsAgrWRexkCSTd0KimYS8Q94vsnlrikAec7z34hSibON+cJjXPeee79xvFADK/0C5UIFyubxLUEulklooFNR8Pn+Sy+VOstmsmslk1HQ6raZSqd2/BCqVyh4RW/V6HePxGJPJRDCdTuU6Go0EZ2dnIFEkk8lWIpHYEwEi24lszGYzjHptfPvsgvbuEJ9ePMPH548Epwf70N4f4fuXY6rpYDgcIh6PG7FYzM62dSav12spfHXn2rk4fbmPxWIhIpFIRFfIzk+v1wvDMLAhka9vD+B88gCv79lxdPeG4M39W/jw9KF8q+oJzOdz2VIoFPqhOJ3O7mAwwHK5xGazketqtRKws3+Bto1arYZgMFhTHA6HC78XW6P0wYJmcAy2y+9arRYoPCHTpOD3+w8Vm8122xTgQhobqtUqms0mGo0GeDLckdOnESIcDqPdbnN3aJp2VbFarTfN7kxmUqfTkSLuyM8syB3pLMj7fr8Pn883kTFaLJbr1EHfbrdilwm9Xg/dblfABNMF3/NWisUiKPjHIkDrMou43e4CF+m6LkUMU4idcFc+WJwRkbU/TiKtS4QrgUDgmGZrcEcelXkKORsWJ9sGkV3n/kzRaHSHgtrQjEGCHJSAyBuPx7Nz4X/jL/ZqKRurPTy6AAAAAElFTkSuQmCC"
+    400Error:
+      description: "The request cannot be prossed due to synthax error or failed semantic validation."
+      content:
+        application/json:
+          schema: &Order400Schema
+            type: "object"
+            properties:
+              details:
+                anyOf:
+                  - type: "object"
+                    properties:
+                      type_expectation:
+                        type: "object"
+                        example:
+                          group: "integer"
+                          name: "string"
+                  - type: "object"
+                    properties:
+                      missing:
+                        type: "array"
+                        items:
+                          type: "string"
+                        example: ["group", "name"]
+                example:
+                  type_expectation:
+                    group: "integer"
+                    name: "string"
+              <<: *400
+              additional_message:
+                type: "string"
+                example: "Wrong types"
+        application/xml:
+          schema:
+            <<: *Order400Schema
+            xml:
+              name: "error"
       
 
 security:
